--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>GIT</title>
 
   <link rel="stylesheet" href="css/reveal.css">
-  <link rel="stylesheet" href="css/theme/black.css">
+  <link rel="stylesheet" href="css/tijs.css">
 
   <!-- Theme used for syntax highlighting of code -->
-  <link rel="stylesheet" href="lib/css/zenburn.css">
+  <link rel="stylesheet" href="css/zenburn.css">
 
   <!-- Printing and PDF exports -->
   <script>
@@ -34,6 +34,7 @@
       </footer>
     </section>
 
+    <!-- about -->
     <section>
       <h1>Hello,<br />I am Tijs.</h1>
 
@@ -46,11 +47,14 @@
       </aside>
     </section>
 
-    
+    <!-- questions -->
+    <section>
+      <h1>Questions?</h1>
+    </section>
   </div>
 </div>
 
-<script src="lib/js/head.min.js"></script>
+<script src="js/head.min.js"></script>
 <script src="js/reveal.js"></script>
 
 <script>
