--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
   // - https://github.com/hakimel/reveal.js#configuration
   // - https://github.com/hakimel/reveal.js#dependencies
   Reveal.initialize({
+    controlsTutorial: true,
+    history: true,
     dependencies: [
       {src: 'plugin/notes/notes.js', async: true},
       {src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); }}
