Made the title slide look good

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <title>GIT</title>
+  <title>Git</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
   <link rel="stylesheet" href="css/reveal.css">
@@ -25,9 +25,12 @@
 <body>
 <div class="reveal">
   <div class="slides">
-    <!-- title -->
+    <!-- Title -->
     <section>
-      <h1>GIT</h1>
+      <h1>
+        <img src="./images/git_logo.png"><br />
+        <span class="sr-only">Git</span>
+      </h1>
       <footer>
         <p>
           <small>laatste update: 08/01/2017</small>
