Made the about me slide

--- a/index.html
+++ b/index.html
@@ -38,16 +38,24 @@
       </footer>
     </section>
 
-    <!-- about -->
-    <section>
-      <h1>Hello,<br />I am Tijs.</h1>
+    <!-- About me -->
+    <section id="about-me" data-background-image="./images/bmw_bg.jpg">
+      <h1>Hello,<br />I am Tijs</h1>
 
-      <p>
-        <a href="https://github.com/tijsverkoyen">https://github.com/tijsverkoyen</a>
-      </p>
+      <footer>
+        <small>
+          <a href="https://github.com/tijsverkoyen">https://github.com/tijsverkoyen</a>
+        </small>
+      </footer>
 
       <aside class="notes">
-        Ik ben niet zo aan Social Media, maar als je mij Google'd zal je vermoedelijk wel wat informatie over mij vinden.
+        <p>
+          Ik werk bij <a href="https://sumocoders.be/">SumoCoders</a>, een Gents webbedrijf. We bouwen webapplicaties.
+        </p>
+        <p>
+          Ik ben in beperkte mate aanwezig op social media, maar het meest relevante is vermoedelijk mijn
+          <a href="https://github.com/tijsverkoyen">Github-account</a>.
+        </p>
       </aside>
     </section>
 
