--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     <!-- Merge & Diff tools -->
 
     <!-- Questions -->
-    <section>
+    <section data-background-video="./videos/questions_bg.mp4" data-background-video-loop="true" data-background-video-muted="true">
       <h1>Questions?</h1>
     </section>
 
