More information on Git flow

--- a/index.html
+++ b/index.html
@@ -352,6 +352,15 @@
       <!-- Intro -->
       <section>
         <h1>Git Flow</h1>
+
+        <aside class="notes">
+          <p>
+            "Invented" by <a href="http://nvie.com/posts/a-successful-git-branching-model/">Vincent Driessens</a>
+          </p>
+          <p>
+            Is een concept, geen zaken nodig. Al zijn er tools om het af te dwingen.
+          </p>
+        </aside>
       </section>
 
       <!-- Special branches -->
