Links per topic

--- a/index.html
+++ b/index.html
@@ -468,12 +468,24 @@
     <!-- Useful links -->
     <section>
       <h1>Useful links</h1>
-      <ul>
-        <li><a href="https://try.github.io">try.github.io</a></li>
-        <li><a href="https://www.codeschool.com/learn/git">Code School Git courses</a></li>
-        <li><a href="https://git-scm.com/book/en/v2">Pro Git book door Scott Chacon & Ben Straub</a></li>
-        <li><a href="http://nvie.com/posts/a-successful-git-branching-model/">A successful Git branching model</a></li>
-      </ul>
+
+      <div class="text-left">
+        <h2>Git in general</h2>
+        <ul>
+          <li><a href="https://try.github.io">try.github.io</a></li>
+          <li><a href="https://www.codeschool.com/learn/git">Code School Git courses</a></li>
+        </ul>
+
+        <h2>Git Flow</h2>
+        <ul>
+          <li><a href="https://git-scm.com/book/en/v2">Pro Git book door Scott Chacon & Ben Straub</a></li>
+          <li>
+            <a href="https://www.atlassian.com/git/tutorials/comparing-workflows/gitflow-workflow">Gitflow Workflow Tutorial</a>
+          </li>
+          <li><a href="http://nvie.com/posts/a-successful-git-branching-model/">A successful Git branching model</a>
+          </li>
+        </ul>
+      </div>
     </section>
   </div>
 </div>
