Correct file name

--- a/index.html
+++ b/index.html
@@ -269,12 +269,12 @@
 
       <!-- change -->
       <section>
-        <h1 class="smaller">Change content for <br /><code>examples/tijs_was_here.txt</code></h1>
+        <h1 class="smaller">Change content for <br /><code>tijs_was_here.txt</code></h1>
       </section>
 
       <!-- git checkout -->
       <section>
-        <h1 class="smaller"><code>git checkout examples/tijs_was_here.txt</code></h1>
+        <h1 class="smaller"><code>git checkout tijs_was_here.txt</code></h1>
 
         <aside class="notes">
           <p>
